Fix route query params and 304 not modified of getFields

--- a/public/admin/views/createNew.html
+++ b/public/admin/views/createNew.html
@@ -6,3 +6,5 @@
     <b ng-if="errorOnSave">{{ errorOnSave.error }}</b>
     <b ng-if="successOnSave.statusMsg">{{ successOnSave.statusMsg }}</b>
 </div>
+
+{{ modelData.fields }}
