--- a/public/admin/views/editDocument.html
+++ b/public/admin/views/editDocument.html
@@ -4,3 +4,5 @@
 
 <b ng-if="errorOnSave">{{ errorOnSave.error }}</b>
 <b ng-if="successOnSave.statusMsg">{{ successOnSave.statusMsg }}</b>
+
+{{ modelData.fieldsWithValues }}
