--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -13,6 +13,7 @@
         <script src="/admin/js/controllers/createNewCtrl.js"></script>
         <script src="/admin/js/directives/renderModelsDirective.js"></script>
         <script src="/admin/js/directives/renderFieldsDirective.js"></script>
+        <script src="/admin/js/directives/formatFieldsDirective.js"></script>
         <script src="/admin/js/services/saveData.js"></script>
         <script src="/admin/js/services/getFieldsService.js"></script>
         <script src="/admin/js/services/getDocumentsService.js"></script>
