--- a/public/admin/views/displayDocuments.html
+++ b/public/admin/views/displayDocuments.html
@@ -1,18 +1,27 @@
+<p class="pageName">Documents - {{ model }}</p>
 <table>
     <tr>
+        <td> Select <td>
         <td> Related Name </td>
         <td> Id </td>
     </tr>
 
     <tr ng-repeat="doc in documentsToDisplay">
         <td>
+            <input type="checkbox" />
+        </td>
+        <td>
             <a href="#editdocument/{{ model }}/{{ doc.id }}">
                 {{ doc.relatedAdminName }}
             </a>
         </td>
-        <td> {{ doc.id }} </td>
+        <td>
+            {{ doc.id }}
+        </td>
     </tr>
 
 </table>
 
 <a href="#createnew/{{ model }}">Create New</a>
+<!-- TODO implements the delete documents -->
+<button type="button"> Delete Documents </button>
